# object_reg

./: CMakeLists.txt  CMakeLists.txt~  README.md  make.sh  objectR.kdev4  object_reg.kdev4  package.xml
.kdev4/: objectR.kdev4  object_reg.kdev4
include/object_reg/: DetectBlueCircle.h  DetectImage.h  DetectMarker.h  DetectYellowLine.h  ImageReader.h  histogram.h  setting.h
msg/: pictureflag.msg  pictureresult.msg
nodes/: .kdev_include_paths  .objectR_node.cpp.kate-swp  object_reg_node.cpp
src/: DetectBlueCircle.cpp  DetectMarker.cpp  DetectYellowLine.cpp  mono.cpp  setting.cpp
